Exec3/expr.output
Terminals unused in grammar

   '('
   ')'
   '.'
   ','
   ';'
   ':'
   '&'
   '!'
   '?'
   T_newline
   '+'
   '-'


Grammar

    0 $accept: agent $end

    1 agent: beliefs plans

    2 beliefs: beliefs belief
    3        | %empty

    4 belief: predicate "."

    5 predicate: T_ATOM "(" terms ")"

    6 plans: plans plan
    7      | %empty

    8 plan: triggering_event ":" context "<-" body "."

    9 triggering_event: "+" predicate
   10                 | "-" predicate
   11                 | "+" goal
   12                 | "-" goal

   13 context: "true"
   14        | cliterals

   15 cliterals: literal
   16          | literal "&" cliterals

   17 literal: predicate
   18        | "not" "(" predicate ")"

   19 goal: "!" predicate
   20     | "?" predicate

   21 body: "true"
   22     | actions

   23 actions: action
   24        | action ";" actions

   25 action: predicate
   26       | goal
   27       | belief_update

   28 belief_update: "+" predicate
   29              | "-" predicate

   30 terms: term
   31      | term "," terms

   32 term: T_VAR
   33     | T_ATOM
   34     | T_NUM
   35     | T_ATOM "(" terms ")"


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'&' (38)
'(' (40)
')' (41)
'+' (43)
',' (44)
'-' (45)
'.' (46)
':' (58)
';' (59)
'?' (63)
error (256)
T_VAR (258) 32
T_newline (259)
T_NUM (260) 34
"not" (261) 18
"true" (262) 13 21
"<-" (263) 8
T_ATOM (264) 5 33 35
"." (265) 4 8
"(" (266) 5 18 35
")" (267) 5 18 35
":" (268) 8
"+" (269) 9 11 28
"-" (270) 10 12 29
"&" (271) 16
"!" (272) 19
"?" (273) 20
";" (274) 24
"," (275) 31


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
agent (33)
    on left: 1, on right: 0
beliefs (34)
    on left: 2 3, on right: 1 2
belief (35)
    on left: 4, on right: 2
predicate (36)
    on left: 5, on right: 4 9 10 17 18 19 20 25 28 29
plans (37)
    on left: 6 7, on right: 1 6
plan (38)
    on left: 8, on right: 6
triggering_event (39)
    on left: 9 10 11 12, on right: 8
context (40)
    on left: 13 14, on right: 8
cliterals (41)
    on left: 15 16, on right: 14 16
literal (42)
    on left: 17 18, on right: 15 16
goal (43)
    on left: 19 20, on right: 11 12 26
body (44)
    on left: 21 22, on right: 8
actions (45)
    on left: 23 24, on right: 22 24
action (46)
    on left: 25 26 27, on right: 23 24
belief_update (47)
    on left: 28 29, on right: 27
terms (48)
    on left: 30 31, on right: 5 31 35
term (49)
    on left: 32 33 34 35, on right: 30 31


State 0

    0 $accept: . agent $end

    $default  reduce using rule 3 (beliefs)

    agent    go to state 1
    beliefs  go to state 2


State 1

    0 $accept: agent . $end

    $end  shift, and go to state 3


State 2

    1 agent: beliefs . plans
    2 beliefs: beliefs . belief

    T_ATOM  shift, and go to state 4

    $default  reduce using rule 7 (plans)

    belief     go to state 5
    predicate  go to state 6
    plans      go to state 7


State 3

    0 $accept: agent $end .

    $default  accept


State 4

    5 predicate: T_ATOM . "(" terms ")"

    "("  shift, and go to state 8


State 5

    2 beliefs: beliefs belief .

    $default  reduce using rule 2 (beliefs)


State 6

    4 belief: predicate . "."

    "."  shift, and go to state 9


State 7

    1 agent: beliefs plans .
    6 plans: plans . plan

    "+"  shift, and go to state 10
    "-"  shift, and go to state 11

    $default  reduce using rule 1 (agent)

    plan              go to state 12
    triggering_event  go to state 13


State 8

    5 predicate: T_ATOM "(" . terms ")"

    T_VAR   shift, and go to state 14
    T_NUM   shift, and go to state 15
    T_ATOM  shift, and go to state 16

    terms  go to state 17
    term   go to state 18


State 9

    4 belief: predicate "." .

    $default  reduce using rule 4 (belief)


State 10

    9 triggering_event: "+" . predicate
   11                 | "+" . goal

    T_ATOM  shift, and go to state 4
    "!"     shift, and go to state 19
    "?"     shift, and go to state 20

    predicate  go to state 21
    goal       go to state 22


State 11

   10 triggering_event: "-" . predicate
   12                 | "-" . goal

    T_ATOM  shift, and go to state 4
    "!"     shift, and go to state 19
    "?"     shift, and go to state 20

    predicate  go to state 23
    goal       go to state 24


State 12

    6 plans: plans plan .

    $default  reduce using rule 6 (plans)


State 13

    8 plan: triggering_event . ":" context "<-" body "."

    ":"  shift, and go to state 25


State 14

   32 term: T_VAR .

    $default  reduce using rule 32 (term)


State 15

   34 term: T_NUM .

    $default  reduce using rule 34 (term)


State 16

   33 term: T_ATOM .
   35     | T_ATOM . "(" terms ")"

    "("  shift, and go to state 26

    $default  reduce using rule 33 (term)


State 17

    5 predicate: T_ATOM "(" terms . ")"

    ")"  shift, and go to state 27


State 18

   30 terms: term .
   31      | term . "," terms

    ","  shift, and go to state 28

    $default  reduce using rule 30 (terms)


State 19

   19 goal: "!" . predicate

    T_ATOM  shift, and go to state 4

    predicate  go to state 29


State 20

   20 goal: "?" . predicate

    T_ATOM  shift, and go to state 4

    predicate  go to state 30


State 21

    9 triggering_event: "+" predicate .

    $default  reduce using rule 9 (triggering_event)


State 22

   11 triggering_event: "+" goal .

    $default  reduce using rule 11 (triggering_event)


State 23

   10 triggering_event: "-" predicate .

    $default  reduce using rule 10 (triggering_event)


State 24

   12 triggering_event: "-" goal .

    $default  reduce using rule 12 (triggering_event)


State 25

    8 plan: triggering_event ":" . context "<-" body "."

    "not"   shift, and go to state 31
    "true"  shift, and go to state 32
    T_ATOM  shift, and go to state 4

    predicate  go to state 33
    context    go to state 34
    cliterals  go to state 35
    literal    go to state 36


State 26

   35 term: T_ATOM "(" . terms ")"

    T_VAR   shift, and go to state 14
    T_NUM   shift, and go to state 15
    T_ATOM  shift, and go to state 16

    terms  go to state 37
    term   go to state 18


State 27

    5 predicate: T_ATOM "(" terms ")" .

    $default  reduce using rule 5 (predicate)


State 28

   31 terms: term "," . terms

    T_VAR   shift, and go to state 14
    T_NUM   shift, and go to state 15
    T_ATOM  shift, and go to state 16

    terms  go to state 38
    term   go to state 18


State 29

   19 goal: "!" predicate .

    $default  reduce using rule 19 (goal)


State 30

   20 goal: "?" predicate .

    $default  reduce using rule 20 (goal)


State 31

   18 literal: "not" . "(" predicate ")"

    "("  shift, and go to state 39


State 32

   13 context: "true" .

    $default  reduce using rule 13 (context)


State 33

   17 literal: predicate .

    $default  reduce using rule 17 (literal)


State 34

    8 plan: triggering_event ":" context . "<-" body "."

    "<-"  shift, and go to state 40


State 35

   14 context: cliterals .

    $default  reduce using rule 14 (context)


State 36

   15 cliterals: literal .
   16          | literal . "&" cliterals

    "&"  shift, and go to state 41

    $default  reduce using rule 15 (cliterals)


State 37

   35 term: T_ATOM "(" terms . ")"

    ")"  shift, and go to state 42


State 38

   31 terms: term "," terms .

    $default  reduce using rule 31 (terms)


State 39

   18 literal: "not" "(" . predicate ")"

    T_ATOM  shift, and go to state 4

    predicate  go to state 43


State 40

    8 plan: triggering_event ":" context "<-" . body "."

    "true"  shift, and go to state 44
    T_ATOM  shift, and go to state 4
    "+"     shift, and go to state 45
    "-"     shift, and go to state 46
    "!"     shift, and go to state 19
    "?"     shift, and go to state 20

    predicate      go to state 47
    goal           go to state 48
    body           go to state 49
    actions        go to state 50
    action         go to state 51
    belief_update  go to state 52


State 41

   16 cliterals: literal "&" . cliterals

    "not"   shift, and go to state 31
    T_ATOM  shift, and go to state 4

    predicate  go to state 33
    cliterals  go to state 53
    literal    go to state 36


State 42

   35 term: T_ATOM "(" terms ")" .

    $default  reduce using rule 35 (term)


State 43

   18 literal: "not" "(" predicate . ")"

    ")"  shift, and go to state 54


State 44

   21 body: "true" .

    $default  reduce using rule 21 (body)


State 45

   28 belief_update: "+" . predicate

    T_ATOM  shift, and go to state 4

    predicate  go to state 55


State 46

   29 belief_update: "-" . predicate

    T_ATOM  shift, and go to state 4

    predicate  go to state 56


State 47

   25 action: predicate .

    $default  reduce using rule 25 (action)


State 48

   26 action: goal .

    $default  reduce using rule 26 (action)


State 49

    8 plan: triggering_event ":" context "<-" body . "."

    "."  shift, and go to state 57


State 50

   22 body: actions .

    $default  reduce using rule 22 (body)


State 51

   23 actions: action .
   24        | action . ";" actions

    ";"  shift, and go to state 58

    $default  reduce using rule 23 (actions)


State 52

   27 action: belief_update .

    $default  reduce using rule 27 (action)


State 53

   16 cliterals: literal "&" cliterals .

    $default  reduce using rule 16 (cliterals)


State 54

   18 literal: "not" "(" predicate ")" .

    $default  reduce using rule 18 (literal)


State 55

   28 belief_update: "+" predicate .

    $default  reduce using rule 28 (belief_update)


State 56

   29 belief_update: "-" predicate .

    $default  reduce using rule 29 (belief_update)


State 57

    8 plan: triggering_event ":" context "<-" body "." .

    $default  reduce using rule 8 (plan)


State 58

   24 actions: action ";" . actions

    T_ATOM  shift, and go to state 4
    "+"     shift, and go to state 45
    "-"     shift, and go to state 46
    "!"     shift, and go to state 19
    "?"     shift, and go to state 20

    predicate      go to state 47
    goal           go to state 48
    actions        go to state 59
    action         go to state 51
    belief_update  go to state 52


State 59

   24 actions: action ";" actions .

    $default  reduce using rule 24 (actions)
